0445 add two numbers

--- a/leetcode/0445_add_two_numbers_II.org
+++ b/leetcode/0445_add_two_numbers_II.org
@@ -1,12 +1,27 @@
 ﻿
 
 * add two numbers
-
-- 链表是单向的
+- 链表是单向的，如何处理进位问题
 - 高位放置在较近的节点
 - 每个数字的位数是不同的
-- 
+- 单向链表要注意返回结果的形式
 
 
+* approach
+- 将链表中的数据存储在数组中，然后在进行计算，这样就能够按照顺序从低位到高位的数据了
+- 记录每个数字的位数，在进行计算时按照位数分别处理
 
+
+* src code
+
+#+begin_src C++
+
+int main()
+{
+
+
+return 0;
+}
+
+#+end_src
 
