--- a/leetcode/0035_search_insert_position.org
+++ b/leetcode/0035_search_insert_position.org
@@ -11,38 +11,59 @@ Here are few examples.
 [1,3,5,6], 7 → 4
 [1,3,5,6], 0 → 0
 
+
 * mysolution
+- 二分查找时需要注意所查找的值是否在范围内
 
 #+begin_src c++
-- binary search, but still incorrect
-
 class Solution
 {
 public:
-  int searchInsert(vector<int>& nums, int target)
-  {
-    int left = 0;
-    int right = nums.size() - 1;
-    
-    int insertDest = 0;
+	int searchInsert(vector<int>& nums, int target)
+	{
+		if (nums.empty())
+		{
+			return 0;
+		}
 
-    while (left < right)
-    {
-      int pos = (right + left) / 2;
-      if (nums[pos] > target)
-      {
-        left = pos - 1;
-      }
-      else
-      {
-        right = pos + 1;
-      }
-    }
+		if (nums.back() == target)
+		{
+			return nums.size() - 1;
+		}
+		else if (nums.back() < target)
+		{
+			return nums.size();
+		}
+		else if (nums.front() > target)
+		{
+			return 0;
+		}
+		
+		int left = 0;
+		int right = nums.size() - 1;
 
-    return target;
-  }
+		int insertDest = 0;
+
+		while (left < right)
+		{
+			insertDest = (right + left) / 2;
+			if (nums[insertDest] == target)
+			{
+				break;
+			}
+			else if (nums[insertDest] > target)
+			{
+				left = insertDest;
+			}
+			else
+			{
+				right = insertDest;
+			}
+		}
+
+		return insertDest;
+	}
 };
-
 #+end_src
 
 
