--- a/linux/shell/shell_fundamental.org
+++ b/linux/shell/shell_fundamental.org
@@ -14,10 +14,18 @@
 - top
 
 
+- ls
+  ls -l 显示详细信息
+  ls -a 显示隐藏文件
+  ls -t 按照时间排序进行
+  ls -r 逆序排序
 
 
 
 
+- jobs, fg
+使用jobs能够查看当前终端在后台运行的程序或命令
+使用fg能够将后台运行的程序带回shell前端
 
 
 
