--- a/linux/shell/shell_fundamental.org
+++ b/linux/shell/shell_fundamental.org
@@ -5,17 +5,22 @@
 ** 进程控制相关
 
 - kill
+  向进程发送信号
 
 - pgrep, pkill
+  
+
 
 - ps
+  =ps -ef= 查看所有用户的进程
+
 
 - top
   linux 下的任务管理器
 
 - jobs, fg
-  使用jobs能够查看当前终端在后台运行的程序或命令
-  使用fg能够将后台运行的程序带回shell前端
+  使用 =jobs= 能够查看当前终端在后台运行的程序或命令
+  使用 =fg= 能够将后台运行的程序带回shell前端
 
 
 ** 文件操作相关
@@ -33,27 +38,27 @@
 
 
 - ls 用于显示当前目录包含的内容
-  ls -l 显示详细信息
-  ls -a 显示隐藏文件
-  ls -t 按照时间排序进行
-  ls -r 逆序排序
-  ls -p 使用反斜杠区分目录，
+  =ls -l=  显示详细信息
+  =ls -a= 显示隐藏文件
+  =ls -t= 按照时间排序进行
+  =ls -r= 逆序排序
+  =ls -p= 使用反斜杠区分目录，
         拓展：可以使用grep -v 反向匹配达到过滤目录的功能
 
 - lsof 列出所有被打开的文件 list open files
 
 
 - wc 用于计算某个文件中的行数，字数，字节数
-  wc -l 只显示行数
-  wc -w 只显示字数
-  wc -c 显示字节数
-  wc -m 显示字符数
+  =wc -l= 只显示行数
+  =wc -w= 只显示字数
+  =wc -c= 显示字节数
+  =wc -m= 显示字符数
   
 
 - df
 
-- du
-
+- du 用于估算文件或文件夹的大小
+  =du -sh= 
 - ln
 
 - grep 正则表达式匹配
