--- a/linux/dir_structure.org
+++ b/linux/dir_structure.org
@@ -9,26 +9,22 @@
 .. type: text
 #+END_COMMENT
 
-* linux系统的目录结构
-
-linux系统的目录结构以及各个目录的作用
+* Linux系统的目录结构以及各个目录的作用
 
 
 ** =/bin=
 bin是binary的缩写，这个目录存放使用者最经常使用的命令
 
-
 ** =/boot=
 这里存放的是启动linux时使用的一些核心文件
-
 
 ** =/etc=
 这个目录用来存放系统管理所需要的配置文件和子目录
 
+{{{TEASER_END}}}
 
 ** =/dev=
 设备文件，这目录下是所有Linux的外部设备。在Linux中设备和文件是用同种方法访问的
-
 
 ** =/home=
 普通用户的主目录
