--- a/algorithms/introduction-to-algorithms-3e/ch1-the-role-of-algorithms-in-computing/ch1-the-role-of-algorithms-in-computing.org
+++ b/algorithms/introduction-to-algorithms-3e/ch1-the-role-of-algorithms-in-computing/ch1-the-role-of-algorithms-in-computing.org
@@ -5,7 +5,62 @@
 hard problems
 
 NP-complete 问题
+为什么travelling-salesman问题是NP-complete问题
 
+
+convex hull: 
+
+parallelism: 算法并行执行能力
+单核CPU性能越来越接近瓶颈，需要充分使用多核CPU的并行计算优势。所以算法是否可以并行运行也是算法的一个特性。
+
+* Exercise
+
+** 1.1-1
+Q: Give a real-world example that requires sorting or a real-world example that requires computing a convex hull.
+A:
+sorting : porker game, line a queue
+convex hull : ?
+
+** 1.1-2
+Q: Other than speed, what other measures of efficiency might one use in a real-world setting?
+A:
+space, user friendly
+
+** 1.1-3
+Q: Select a data structure that you have seen previously, and discuss its strengths and limitations.
+A:
+array
+strength : access by position
+limitation : hard to change its size, hard to remove from front
+
+tips: 各种数据结构的优缺点总结
+
+** 1.1-4
+Q: How are the shortest-path and traveling-salesman problems given above similar? How are they different?
+A:
+
+
+traveling-salesman problems is NP-complete
+
+** 1.1-5
+Q: Come up with a real-world problem in which only the best solution will do. Then come up with one in which a solution that is "approximately" the best is good enough.
+A: 
+best solution: find the tallest person
+approximately best: 
+
+有那些问题通过算法只能找到渐进解，找不到最优解呢？
+
+ 
+
+** 1.2-1
+Q: Give an  example of an application that requires algorithmic content at the application level, and discuss the function of the algorithms involved.
+A:
+在应用层使用算法的例子：
+
+** 1.2-2
+
+
+* Problems
 
 
 
